--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,3 +8,5 @@ jobs:
               run: echo "hello"
             - name: list_files
               run: ls
+            - name: read file
+              run: cat README.md
