--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -5,7 +5,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: git checkout repo
-              uses: actions/@checkout@v4
+              uses: actions/checkout@v4
             - name: welcome message
               run: echo "hello"
             - name: list_files
