--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,43 +1,35 @@
-name: Run Java app
-on: 
+name: Run Java App
+
+on:
   push:
     branches:
-    - main
+      - main
   workflow_dispatch:
-   
-jobs: 
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: git checkout repo
-              uses: actions/checkout@v4
 
-            - name: welcome message
-              run: echo "hello"
+jobs:
+  run-app:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-            - name: list_files
-              run: ls
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-            - name: read file
-              run: cat README.md
+      - name: Compile Java application
+        run: javac src/main/java/com/example/WelcomeApp.java
 
-            - name: set up Java
-              uses: actions/setup-java@v3
-              with:
-                distribution: 'temurin'
-                java-version: '17'
+      - name: Run Java application
+        run: java src/main/java/com/example/WelcomeApp.java &
 
-            - name: Compile Java application
-              run: javac WelcomeApp.java
-        
-            - name: Run Java application
-              run: java Welcomeapp &
+      - name: Wait for server to start
+        run: sleep 2
 
-            - name: Wait for server to start
-              run: sleep 2
+      - name: Test with curl
+        run: curl http://localhost:8080
 
-            - name: Test with curl
-              run: curl http://localhost:8080
-
-            - name: Sleep before exit
-              run: sleep 20
+      - name: Sleep before exit
+        run: sleep 20
